<resources>
    <string name="app_name">OPL TRS</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="internet_error">*Turning of aeroplane mode\n*Turning on mobile data or Wi-Fi\n*Checking the signal in your area</string>
    <string name="by_1ict">Power by OneICT</string>
    <string name="login">Login</string>
    <string name="sign_up">SignUp</string>
    <string name="reg">Registration</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="log_level">Doctor Visit</string>
    <string name="sign_cont">Sign in to Continue</string>
    <string name="log_in">LogIn</string>
    <string name="hint_log_user">Employee ID</string>
    <string name="hint_log_pass">Your Password</string>
    <string name="hint_log_pass_retype">Your Retype Password</string>
    <string name="user_status">Status</string>
    <string name="google_maps_key" templateMergeStrategy="preserve"
    translatable="false">AIzaSyCbNYEK14cThTeHda6HZGvbEQHMOUKTKBY</string>
    <string name="not_found">Data not found!</string>
    <string name="take_picture">Take Picture</string>
    <string name="fontDoctorMgt">&#xf0f1;</string>
    <string name="fontReportMgt">&#xf15b;</string>
    <string name="total_doctors">Total Doctors</string>
    <string name="total_emp">Total Employee</string>
    <string name="completed_visit">Visit Execute</string>
    <string name="target_visit">Target Plan</string>
    <string name="report">Chemist List</string>
    <string name="doctor_visit">Doctor List</string>
    <string name="save_doctor">SAVE</string>
    <string name="doctor_code">Code</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_address">Doctor Address</string>
    <string name="doctor_write_add">Write address here</string>
    <string name="ac_name">Account Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="doctor_tel">Telephone</string>
    <string name="doctor_speciality">Speciality</string>
    <string name="doctor_method">Payment Method</string>
    <string name="acc_no">Account No</string>
    <string name="amount">Amount</string>
    <string name="yes_no">Yes/No</string>
    <string name="change_pass">Change Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Retype password</string>
    <string name="change_password">To protect privacy\nYou can change your password.</string>
    <string name="drs">Doctors</string>
    <string name="chemist">Chemist</string>
    <string name="post_location">Posting Location</string>
    <string name="designation">Designation</string>
    <string name="emp_code">Employee Code</string>
    <string name="write_comments">Write your comments here</string>
    <string name="order_amount">Order amount</string>
    <string name="collect_amount">Collected amount</string>
    <string name="set_plan">SET PLAN</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="roster">Roster: </string>
    <string name="zone">Zone: </string>
    <string name="depot">Depot: </string>
    <string name="region">Region: </string>
    <string name="area">Area: </string>
    <string name="territory">Territory: </string>
    <string name="mio">Mio: </string>
    <string name="market">Market: </string>
    <string name="emp_">Employee: </string>
    <string name="emp">Employee</string>
    <string name="plan">Plan: </string>
    <string name="dr">Doctor</string>
    <string name="search_for">Search for: </string>
    <string name="mio_wise_dr">Mio wise doctor report</string>
    <string name="mio_wise_chem">Mio wise chemist report</string>
    <string name="dr_visit">Doctor visit report</string>
    <string name="chem_visit">Chemist visit report</string>
    <string name="emp_visit">Employee visit report</string>
    <string name="cng_password">Change password</string>
    <string name="tracking">Tracking</string>
    <string name="list">List</string>
    <string name="rpt">Report</string>
    <string name="in_out">CheckIn/Out</string>
    <string name="check_out">CHECK OUT</string>
    <string name="check_in">CHECK IN</string>
    <string name="inout">IN &amp;&amp; OUT</string>
    <string name="total_chemist">Total chemist visited</string>
    <string name="total_dr">Total doctor visited</string>
    <string name="total_collection">Total collection</string>
    <string name="total_order">Total order</string>
    <string name="show_collect">SHOW COLLECTION CLICK BAG</string>
    <string name="show_invoice">SHOW INVOICE CLICK BAG</string>
    <string name="addPlus">+</string>
    <string name="minusMinus">-</string>
    <string name="textStock">Stock</string>
    <string name="textSale">Sale</string>




</resources>
