<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:gravity="center">


    <TextView
        android:id="@+id/tvBBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tvBBar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/log_bottom_bar" />

    <TextView
        android:id="@+id/tvPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBBar"
        android:gravity="center"
        android:padding="@dimen/tvPower_padding"
        android:text="@string/by_1ict"
        android:textColor="@color/divider" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/tvPower">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/tvOplSales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawablePadding="@dimen/tvOplSales_padding"
            android:gravity="center"
            android:singleLine="true"
            android:src="@drawable/log_top"
            android:textColor="@color/tx_color"
            android:textSize="@dimen/tvOplSales_txSize"
            android:textStyle="bold"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/log_top"
            android:contentDescription="@null"
            android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image"
        android:layout_marginLeft="@dimen/tvOplSales_padding"
        android:layout_marginRight="@dimen/tvOplSales_padding"
        android:layout_marginTop="@dimen/et_margin10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSingCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_cont"
            android:layout_marginBottom="@dimen/et_margin10"
            android:textColor="@color/divider"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:endIconTint="@color/divider"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_log_user"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:endIconTint="@color/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctUserPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/hint_log_pass"
                android:textSize="@dimen/text14"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--<helper.ClearEditText
            android:id="@+id/ctUserPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin"
            android:background="@drawable/edittext_modified"
            android:hint="@string/hint_log_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minLines="1"
            android:gravity="center"
            android:padding="@dimen/et_margin10"
            android:singleLine="true"
            android:textColor="@color/primary_text"
            android:textCursorDrawable="@drawable/color_cursor" />-->

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvOplSales_padding"
            android:background="@drawable/toolbar_bg"
            android:gravity="center"
            android:paddingBottom="@dimen/et_margin10"
            android:paddingTop="@dimen/et_margin10"
            android:textSize="@dimen/text_size14"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin"
            android:gravity="center"
            android:padding="@dimen/tvPower_padding"
            android:text="@string/forgotPass"
            android:textColor="@color/tx_color"
            android:textSize="@dimen/text_size14"
            android:textStyle="bold"/>
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
    <ProgressBar
        android:id="@+id/pbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/circular_progress_bar"
        android:visibility="invisible">
    </ProgressBar>


</RelativeLayout>