<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.Profile">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/headView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">


        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="9dp"
            android:contentDescription="@null"
            android:padding="3dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/opl_logo" />

        <TextView
            android:id="@+id/tvStaffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStaffName"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/countView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headView"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:paddingTop="@dimen/et_margin5"
            android:paddingBottom="@dimen/et_margin5">

            <TextView
                android:id="@+id/tvNumberDr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNumberDr"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/drs"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:paddingTop="@dimen/et_margin5"
            android:paddingBottom="@dimen/et_margin5">


            <TextView
                android:id="@+id/tvNumberChemist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNumberChemist"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-light"
                android:text="@string/chemist"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />


        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/countView"
        android:layout_marginLeft="@dimen/et_margin10"
        android:layout_marginRight="@dimen/et_margin10"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tvStaffMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize="@dimen/text_size16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/et_padding15"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_padding15"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_location"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tvTerritory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize="@dimen/text_size16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/et_padding15"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_padding15"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tvDesignation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize="@dimen/text_size16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/et_padding15"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_padding15"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emp_code"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size14" />

            <TextView
                android:id="@+id/tvStaffCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize="@dimen/text_size16" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/et_padding15"
                android:background="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>