<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />



    <TextView
        android:id="@+id/btnChangePass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/et_margin10"
        android:layout_marginRight="@dimen/et_margin10"
        android:layout_marginBottom="@dimen/et_margin5"
        android:background="@drawable/toolbar_bg"
        android:gravity="center"
        android:padding="@dimen/et_margin10"
        android:text="@string/change_pass"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size14"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnChangePass"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/et_margin5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_margin10"
            app:endIconTint="@color/divider"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Old password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconTint="@color/divider"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text14" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconTint="@color/divider"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Retype password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/text14" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/pbChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/circular_progress_bar"
        android:visibility="invisible" />
</RelativeLayout>