<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/btnMkt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/et_margin10"
        android:layout_marginRight="@dimen/et_margin10"
        android:layout_marginBottom="@dimen/et_margin5"
        android:background="@drawable/toolbar_bg"
        android:gravity="center"
        android:padding="@dimen/et_margin10"
        android:text="@string/save_doctor"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size14"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnMkt"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/et_margin5"
            android:orientation="vertical"
            android:padding="@dimen/et_margin5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/viewMarketCode"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconTint="@color/divider"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMktCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doctor_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin5"
                app:endIconMode="clear_text"
                app:endIconTint="@color/divider"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMktName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Market name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text14" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin5"
                app:endIconTint="@android:color/black"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setMarket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:drawableLeft="@drawable/map_logo"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:hint="Select place"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size14" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_margin5"
                app:endIconMode="clear_text"
                app:endIconTint="@color/divider"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMktAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:hint="@string/doctor_write_add"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="3"
                    android:minLines="3"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text14" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/et_margin5"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ac_name"
                    android:textColor="@color/common_google_signin_btn_text_light_pressed"
                    android:textStyle="bold" />

                <helper.ClearEditText
                    android:id="@+id/etDoctorAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/edittext_modified"
                    android:gravity="center"
                    android:hint="@string/ac_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:minLines="1"
                    android:padding="@dimen/et_margin5"
                    android:singleLine="true"
                    android:textColor="@color/primary_text"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/text_size16" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/et_margin5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes_no"
                    android:textColor="@color/common_google_signin_btn_text_light_pressed"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/mktAgree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:theme="@style/CheckBoxTheme" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbMktNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:indeterminateDrawable="@drawable/circular_progress_bar"
        android:visibility="invisible" />
</RelativeLayout>